Updated the website for 2024

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> daníel <br> jóhannsson <span>.</span>   </h2>
 							<p>computer science and engineering student</p>
-							<a href="assets/download/CV_Daniel_2023.pdf" download>download resume</a>
+							<a href="assets/download/CV_Daniel_2024_new.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
@@ -123,12 +123,12 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									Hello and welcome! My name is Daníel Jóhannsson and I am a 23 year old Computer Science and Engineering student at Lund University.
-									Currently I am enrolled in my fourth year, looking to graduate in the summer of 2025 with a master's degree in artificial intelligence.
+									Hello and welcome! My name is Daníel Jóhannsson and I am a 24 year old Computer Science and Engineering student at Lund University.
+									Currently I am enrolled in my last year, looking to graduate in the summer of 2025 with a master's degree in artificial intelligence.
 								</h3>
 								<p>
 									The reason I chose Computer Science was due to my strong passion for technology and problem solving, but also a strong interest
-									in startups and entrepreneurship. My current experiences consist of working with software development at Ericsson and several non-profit projects.
+									in startups and entrepreneurship. My current experiences consist of working with software development at Hedvig and several non-profit projects.
 									A current goal of mine is to gain more work experience within software development, but also steer towards a more business oriented role.
 									A combination of technology and business is what interests me the most, drawing me towards roles that offer both.
 									Apart from my professional self, I am an average student who likes to travel, workout and socialize with friends. I also enjoy learning new things and
@@ -337,18 +337,18 @@
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
 												<img 
-													src="assets/images/skills/docker-svgrepo-com.svg"
+													src="assets/images/skills/react-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												<div class="profile-icon-name">docker</div>
+												<div class="profile-icon-name">react</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<img 
-														src="assets/images/skills/docker-svgrepo-com.svg"
+														src="assets/images/skills/react-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													<div class="profile-icon-name">docker</div>
+													<div class="profile-icon-name">react</div>
 												</div>
 											</div>
 										</div>
@@ -400,18 +400,18 @@
 										<div class="single-profile">
 											<div class="profile-txt">
 												<img 
-													src="assets/images/skills/azure-svgrepo-com.svg"
+													src="assets/images/skills/ci-cd-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												<div class="profile-icon-name">azure</div>
+												<div class="profile-icon-name">CI/CD</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<img 
-														src="assets/images/skills/azure-svgrepo-com.svg"
+														src="assets/images/skills/ci-cd-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													<div class="profile-icon-name">azure</div>
+													<div class="profile-icon-name">CI/CD</div>
 												</div>
 											</div>
 										</div>
@@ -420,22 +420,23 @@
 										<div class="single-profile profile-no-border">
 											<div class="profile-txt">
 												<img 
-													src="assets/images/skills/react-svgrepo-com.svg"
+													src="assets/images/skills/docker-svgrepo-com.svg"
 													height="80"
 													width="80"/>
-												<div class="profile-icon-name">react</div>
+												<div class="profile-icon-name">docker</div>
 											</div>
 											<div class="single-profile-overlay">
 												<div class="profile-txt">
 													<img 
-														src="assets/images/skills/react-svgrepo-com.svg"
+														src="assets/images/skills/docker-svgrepo-com.svg"
 														height="80"
 														width="80"/>
-													<div class="profile-icon-name">react</div>
+													<div class="profile-icon-name">docker</div>
 												</div>
 											</div>
 										</div>
 									</div>
+									
 								</div>
 							</div>
 						</div>
@@ -453,6 +454,71 @@
 				<div class="experience-content">
 						<div class="main-timeline">
 							<ul>
+
+								<li>
+									<div class="single-timeline-box fix">
+										<div class="row">
+											<div class="col-md-offset-1 col-md-5 experience-time-responsive">
+												<div class="experience-time">
+													<h2>
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														2024 - 2024
+													</h2>
+													<h3>software engineering intern</h3>
+												</div><!--/.experience-time-->
+											</div><!--/.col-->
+											<div class="col-md-5">
+												<div class="timeline">
+													<div class="timeline-content text-right">
+														<h4 class="title">
+															hedvig
+														</h4>
+														<h5>stockholm, sweden</h5>
+														<p class="description">
+															Hedvig is a Swedish insurtech company that offers home insurance. I worked as a software engineering intern in both the backend as well as the frontend team, working with the development of the company's internal software tools used for handling insurance claims. 
+														</p>
+													</div><!--/.timeline-content-->
+												</div><!--/.timeline-->
+											</div><!--/.col-->
+											<div class="col-md-offset-1 col-md-5 experience-time-main">
+												<div class="experience-time">
+													<h2>
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														2024 - 2024
+													</h2>
+													<h3>software engineering intern</h3>
+												</div><!--/.experience-time-->
+											</div><!--/.col-->
+										</div>
+									</div><!--/.single-timeline-box-->
+								</li>
+
+								<li>
+									<div class="single-timeline-box fix">
+										<div class="row">
+											<div class="col-md-5">
+												<div class="experience-time text-right">
+													<h2>2024 - 2024</h2>
+													<h3>software developer (part-time)</h3>
+												</div><!--/.experience-time-->
+											</div><!--/.col-->
+											<div class="col-md-offset-1 col-md-5">
+												<div class="timeline">
+													<div class="timeline-content">
+														<h4 class="title">
+															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+															sony
+														</h4>
+														<h5>lund, sweden</h5>
+														<p class="description">
+															I worked as a part-time software developer in the Sony Mobile department, working with the development of an internal software tool for mobile device testing.
+														</p>
+													</div><!--/.timeline-content-->
+												</div><!--/.timeline-->
+											</div><!--/.col-->
+										</div>
+									</div><!--/.single-timeline-box-->
+								</li>
 
 								<li>
 									<div class="single-timeline-box fix">
