--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
 										<div class="row">
 											<div class="col-sm-12">
 												<div class="form-group">
-													<textarea class="form-control" rows="8" id="comment" placeholder="Message" ></textarea>
+													<input class="form-control" rows="8" id="comment" placeholder="Message" ></input>
 												</div><!--/.form-group-->
 											</div><!--/.col-->
 										</div><!--/.row-->
